@@ -146,7 +146,7 @@ namespace Test
                 this.CreateWinResourceContainer("$(packagedir)/resources/win32.rc");
                 if (this.Linker is VisualCCommon.LinkerBase)
                 {
-                    this.CompilePubliclyAndLinkAgainst<WindowsSDK.WindowsSDK>(source);
+                    this.CompileAndLinkAgainst<WindowsSDK.WindowsSDK>(source);
                 }
             }
         }
