@@ -1,3 +1,5 @@
+25-Mar-2016 Fixes #181. POTENTIALLY BREAKING CHANGE. Clarified the use of the 'public' utility functions in the C package. The CompilePubliclyAndLinkAgainst function has moved from C.ConsoleApplication to C.DynamicLibrary and C.Cxx.DynamicLibrary to enforce that 'public' inheritance of patches to dependents are not necessary for executables, but are for dynamic libraries. Added LinkPubliclyAgainst to C.DynamicLibrary and C.Cxx.DynamicLibrary. Added Bam.Core.Module.UsePublicPatchesPrivately, which takes the public patches from a dependent, but only applies them to the build of the current module, rather than forwarding them to any future dependees. Added more documentation to Bam.Core.Module regarding the application of patches. The likely changes to make to existing build scripts is to change CompilePubliclyAndLinkAgainst to CompileAndLinkAgainst in C.ConsoleApplication to C.GuiApplication (particularly for WindowsSDK), or that modules were previously compiling because patches had been leaked through prior to this change.
+
 25-Mar-2016 Fixes #182. When the C# assembly for all the packages in a build fails to compile, an improved error message is now displayed, hinting at using the command line option in bam for enabling debug symbols, and the option to generate a debuggable project in one of the applicable IDEs (VisualStudio/Xamarin Studio/MonoDevelop).
 
 25-Mar-2016 Fixes #180. C.DynamicLibrary and C.Cxx.DynamicLibrary that identify dynamic library dependencies with CompilePubliclyAndLinkAgainst now forward those dependencies on, just like how StaticLibraries already do. If the public API in dynamic library D is exposed in the public API of dynamic library E, then it is legal for a compilation step dependent on D to invoke calls in E that were not resolved during D's link. This change simplifies writing build scripts in that transient dynamic dependencies no longer need to be manually specified.
